# sq-decoder

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  justfile
.github/workflows/: ci.yml
docs/: sq-decoder-explained.md
docs/plans/: 2026-01-02-sq-decoder-documentation-design.md
source/: sqdecoder_controller.cpp  sqdecoder_controller.h  sqdecoder_entry.cpp  sqdecoder_processor.cpp  sqdecoder_processor.h  sqdecoder_shared.h
